--- a/LoginWeb/templates/Login.html
+++ b/LoginWeb/templates/Login.html
@@ -12,8 +12,10 @@
       <div class="form-login">
         <h4>Welcome to Lab304 !</h4>
         <form action="{{ url_for('Login') }}" method="post">
-          <input type="text" name="userName"     class="form-control input-sm chat-input" placeholder="username"/></br>
-          <input type="text" name="userPassword" class="form-control input-sm chat-input" placeholder="password"/></br>
+          <input type="text"     name="userName"     placeholder="username"
+                 class="form-control input-sm chat-input"/></br>
+          <input type="password" name="userPassword" placeholder="password"
+                 class="form-control input-sm chat-input"/></br>
           <div class="wrapper">
             <span class="group-btn">
               <input type="submit" value="login" class="btn btn-primary btn-md"/>
