--- a/LoginWeb/templates/lists.html
+++ b/LoginWeb/templates/lists.html
@@ -6,7 +6,7 @@
 <body>
 
   <nav class="navbar navbar-light bg-light justify-content-between">
-    <a class="navbar-brand">Navbar</a>
+    <a class="navbar-brand"> {{ current_user.id }} </a>
     <form class="form-inline" action="{{ url_for('Logout') }}">
       <button class="btn btn-primary btn-md" type="submit">logout</button>
     </form>
@@ -16,19 +16,19 @@
     <div class="row justify-content-center">
       <div class="col-8">
         {% for data in container_list %}
-          <div class="card mb-3">
+          <div class="card my-3">
             <div class="card-header"> {{ data.name }} </div>
             <div class="card-body">
               <h5 class="card-title"> {{ data.id }} </h5>
               <p class="card-text"> {{ data.comment }} </p>
               <button type="button" class="btn btn-outline-primary"
-                      onclick="send('{{data.id}}', 'Resume')">Resume</button>
+                      onclick="send('{{data.id}}', 'Resume')" >Resume </button>
               <button type="button" class="btn btn-outline-warning"
                       onclick="send('{{data.id}}', 'Restart')">Restart</button>
               <button type="button" class="btn btn-outline-danger"
-                      onclick="send('{{data.id}}', 'Reset')">Reset</button>
+                      onclick="send('{{data.id}}', 'Reset')"  >Reset  </button>
               <button type="button" class="btn btn-outline-danger"
-                      onclick="send('{{data.id}}', 'Remove')">Remove</button>
+                      onclick="send('{{data.id}}', 'Remove')" >Remove </button>
             </div>
             <div class="card-footer text-muted"> {{ data.time }} </div>
           </div>
