--- a/LoginWeb/templates/Login.html
+++ b/LoginWeb/templates/Login.html
@@ -23,6 +23,11 @@
           </div>
         </form>
       </div>
+      {% if error %}
+        <div class="alert alert-danger" role="alert">
+          {{ error }}
+        </div>
+      {% endif %}
     </div>
   </div>
 </div>
