Connect to unix socket

--- a/LoginWeb/tzfserver/templates/lists.html
+++ b/LoginWeb/tzfserver/templates/lists.html
@@ -19,7 +19,7 @@
           <div class="card my-3">
             <div class="card-header"> {{ data.name }} </div>
             <div class="card-body">
-              <!-- h5 class="card-title"> {{ data.id[:10] }} </h5 -->
+              <!-- h5 class="card-title"> status: {{ data.status }} </h5 -->
               <p class="card-text"> {{ data.comment }} </p>
 
               <div class="btn-group" role="group">
@@ -30,9 +30,7 @@
                 <button type="button" class="btn btn-outline-warning"
                         onclick="send('{{data.id}}', 'Restart')">Restart</button>
                 <button type="button" class="btn btn-outline-danger"
-                        onclick="send('{{data.id}}', 'Reset')"  >Reset  </button>
-                <button type="button" class="btn btn-outline-danger"
-                        onclick="send('{{data.id}}', 'Remove')" >Remove </button>
+                        onclick="send('{{data.id}}', 'Stop')"   >Stop   </button>
                 </div>
             </div>
             <div class="card-footer text-muted"> {{ data.id[:10] }} </div>
