--- a/LoginWeb/tzfserver/templates/lists.html
+++ b/LoginWeb/tzfserver/templates/lists.html
@@ -36,6 +36,7 @@
                   <input  type="submit" value="Stop"    onclick="changeMethod('Stop')"
                           class="btn btn-outline-danger"/>
                 </form>
+              </div>
             </div>
             <div class="card-footer text-muted"> {{ data.id[:10] }} </div>
           </div>
