--- a/LoginWeb/tzfserver/templates/changePassword.html
+++ b/LoginWeb/tzfserver/templates/changePassword.html
@@ -3,6 +3,8 @@
 <head>
   <!--https://bootsnipp.com/snippets/gv6b1-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
 
@@ -11,6 +13,9 @@
 		<div class="col-5">
 		    <h3 class="text-center">Reset Password</h3>
 		    <hr/>
+            <div class="alert alert-info" role="info">
+                We use SHA512 to encrypt your password.
+            </div>
             <form action="{{ url_for('ChangePassword') }}" method="post">
 		        <div class="form-group">
 		            <label>Old Password :</label>
