--- a/LoginWeb/tzfserver/templates/lists.html
+++ b/LoginWeb/tzfserver/templates/lists.html
@@ -34,9 +34,9 @@
                 <form action="{{ url_for('apis') }}" method="post">
                   <input  type="hidden" value="{{data.id}}" name="id"/>
                   <input  type="hidden" value=""            name="method"/>
-                  <input  type="submit" value="Restart" onclick="changeMethod('Restart')"
+                  <input  type="submit" value="Restart" onclick="changeMethod(this, 'Restart')"
                           class="btn btn-outline-warning"/>
-                  <input  type="submit" value="Stop"    onclick="changeMethod('Stop')"
+                  <input  type="submit" value="Stop"    onclick="changeMethod(this, 'Stop')"
                           class="btn btn-outline-danger"/>
                 </form>
               </div>
@@ -50,8 +50,8 @@
 
 </body>
 <script>
-  function changeMethod(method) {
-    document.querySelector("input[name='method']").value = method;
+  function changeMethod(ele, method) {
+    ele.parentElement.querySelector("input[name='method']").value = method;
   }
 
 </script>
