--- a/LoginWeb/tzfserver/templates/lists.html
+++ b/LoginWeb/tzfserver/templates/lists.html
@@ -10,7 +10,7 @@
 
   <nav class="navbar navbar-light bg-light justify-content-between">
     <a class="navbar-brand"> {{ current_user.id }} </a>
-    <form class="form-inline" action="{{ url_for('Logout') }}">
+    <form class="form-inline" action="{{ url_for('Login') + '?slo' }}">
       <button class="btn btn-primary btn-md" type="submit">logout</button>
     </form>
   </nav>
