--- a/LoginWeb/tzfserver/templates/lists.html
+++ b/LoginWeb/tzfserver/templates/lists.html
@@ -18,6 +18,12 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-8">
+        <div class="alert alert-success" role="alert">
+          <p> Bulletin Board </p>
+          <br>
+          <p> HI </p>
+        </div>
+
         {% for data in container_list %}
           <div class="card my-3">
             <div class="card-header"> {{ data.name }} </div>
