Add logger and logout

--- a/OauthServer/oauthserver/templates/changePassword.html
+++ b/OauthServer/oauthserver/templates/changePassword.html
@@ -16,7 +16,7 @@
             <div class="alert alert-info" role="info">
                 We use SHA512 to encrypt your password.
             </div>
-            <form action="{{ url_for('ChangePassword') }}" method="post">
+            <form action="{{ url_for('oauthserver.routes.ChangePassword') }}" method="post">
 		        <div class="form-group">
 		            <label>Old Password :</label>
 		            <input type="password" name='opw' class="form-control"/>
