--- a/OauthServer/oauthserver/templates/changePassword.html
+++ b/OauthServer/oauthserver/templates/changePassword.html
@@ -1,13 +1,9 @@
-<!doctype html>
-<html>
-<head>
-  <!--https://bootsnipp.com/snippets/gv6b1-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-</head>
-<body>
+{% extends 'base.html' %}
 
+{% block title %}
+Change Password
+{% endblock %}
+{% block body %}
 <div class="container">
 	<div class="row  justify-content-center">
 		<div class="col-5">
@@ -41,6 +37,4 @@
 		</div>
 	</div>
 </div>
-
-</body>
-</html>
+{% endblock %}
