--- a/OauthServer/oauthserver/templates/boxlist.html
+++ b/OauthServer/oauthserver/templates/boxlist.html
@@ -26,7 +26,8 @@ list
             <div class="card-body">
               <h5 class="card-title"> status: {{ data.status }} </h5>
               <p class="card-text"> {{ data.text }} </p>
-              <p class="card-text"> node: {{ data.node}} </p>
+              <p class="card-text"> node: {{ data.node }} </p>
+              <p class="card-text"> image: {{ data.image }} </p>
 
               <form action="{{ url_for('oauthserver.box_models.api')}}" method="post">
                 <input type="hidden"   name="name"     value="{{data.name}}"/>
