--- a/OauthServer/oauthserver/templates/boxlist.html
+++ b/OauthServer/oauthserver/templates/boxlist.html
@@ -28,6 +28,7 @@ list
               <p class="card-text"> {{ data.text }} </p>
               <p class="card-text"> node: {{ data.node }} </p>
               <p class="card-text"> image: {{ data.image }} </p>
+              <p class="card-text"> create time: {{ data.date }} </p>
 
               <form action="{{ url_for('oauthserver.box_models.api')}}" method="post">
                 <input type="hidden"   name="name"     value="{{data.realname}}"/>
@@ -47,7 +48,7 @@ list
               <div class="card-header"> Create New Environment {{create_param.use_quota + 1}}/{{create_param.quota}} </div>
               <div class="card-body">
                 <div class="form-group">
-                  <label for="name">Name (optional)</label>
+                  <label for="name">Name (optional) (you can only input <code>a-z0-9-_</code>) </label>
                   <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <span class="input-group-text">{{ current_user.name + '_'}}</span>
