--- a/OauthServer/oauthserver/templates/boxlist.html
+++ b/OauthServer/oauthserver/templates/boxlist.html
@@ -37,6 +37,7 @@ list
                   <input type="submit" name="method" value="Restart" class="btn btn-outline-warning"/>
                   <input type="submit" name="method" value="Stop"    class="btn btn-outline-warning"/>
                   <input type="submit" name="method" value="Delete"  class="btn btn-outline-danger" />
+                  <input type="submit" name="method" value="Rescue"  class="btn btn-outline-danger" />
                 </div>
               </form>
             </div>
