Jupyter: add button

--- a/OauthServer/oauthserver/templates/boxlist.html
+++ b/OauthServer/oauthserver/templates/boxlist.html
@@ -38,6 +38,7 @@ list
                   <input type="submit" name="method" value="Stop"    class="btn btn-outline-warning"/>
                   <input type="submit" name="method" value="Delete"  class="btn btn-outline-danger" />
                   <input type="submit" name="method" value="Rescue"  class="btn btn-outline-danger" />
+                  <a type="button" class="btn btn-outline-primary" href='/jupyter/{{ data.realname }}'>Jupyter(Learn3.6 only)</a>
                 </div>
               </form>
 
