--- a/labboxmain/labboxmain/templates/error.html
+++ b/labboxmain/labboxmain/templates/error.html
@@ -3,7 +3,7 @@
 <div class="terminal">
   <h1>Error <span class="errorcode">{{code}}</span></h1>
   <p class="output">{{text}}</p>
-  <p class="output">Go To <a href="{{url_for('oauthserver.box_models.List')}}">HomePage</a></p>
+  <p class="output">Go To <a href="{{url_for('labboxmain.box_models.List')}}">HomePage</a></p>
   <p class="output">Good luck</p>
 </div>
 
