--- a/labboxmain/labboxmain/templates/Login.html
+++ b/labboxmain/labboxmain/templates/Login.html
@@ -10,7 +10,7 @@ Login
     <div class="col-5 login-container">
       <div class="form-login">
         <h4>Welcome to {{ config.name }} !</h4>
-        <form action="{{ url_for('oauthserver.routes.Login', next=request.args.get('next')) }}" method="post">
+        <form action="{{ url_for('labboxmain.routes.Login', next=request.args.get('next')) }}" method="post">
           <input type="text"     name="userName"     placeholder="username"
                  class="form-control input-sm chat-input"/></br>
           <input type="password" name="userPassword" placeholder="password"
