--- a/labboxmain/labboxmain/templates/boxlist.html
+++ b/labboxmain/labboxmain/templates/boxlist.html
@@ -38,12 +38,12 @@ list
               <form action="{{ url_for('labboxmain.box_models.api')}}" method="post">
                 <input type="hidden"   name="name"     value="{{data.realname}}"/>
                 <div class="btn-group" role="group">
-                  <input type="submit" name="method" value="Start"   class="btn btn-outline-primary"/>
+                  <input type="submit" name="method" value="Desktop" class="btn btn-outline-primary"/>
                   <input type="submit" name="method" value="Restart" class="btn btn-outline-warning"/>
                   <input type="submit" name="method" value="Stop"    class="btn btn-outline-warning"/>
                   <input type="submit" name="method" value="Delete"  class="btn btn-outline-danger" />
                   <input type="submit" name="method" value="Rescue"  class="btn btn-outline-danger" />
-                  <a type="button" class="btn btn-outline-primary" href='/jupyter/{{ data.realname }}'>Jupyter(Learn3.6 only)</a>
+                  <input type="submit" name="method" value="Jupyter" class="btn btn-outline-primary"/>
                 </div>
               </form>
 
