Refactor: Add docstring on boxqueue

--- a/labboxmain/labboxmain/templates/boxqueue.html
+++ b/labboxmain/labboxmain/templates/boxqueue.html
@@ -47,7 +47,7 @@ queue
                     {% if not data.permit or data.queueing %} disabled {% endif %} />
               Log
             </button>
-            {% if data.user == current_user.name%}
+            {% if data.permit %}
               {{ data.command }}
             {% endif %}
           </td>
